--- a/config/routes/dev/web_profiler.yaml
+++ b/config/routes/dev/web_profiler.yaml
@@ -1,7 +1,13 @@
 web_profiler_wdt:
     resource: '@WebProfilerBundle/Resources/config/routing/wdt.xml'
     prefix: /_wdt
+    schemes:
+        - HTTP
+        - HTTPS
 
 web_profiler_profiler:
     resource: '@WebProfilerBundle/Resources/config/routing/profiler.xml'
     prefix: /_profiler
+    schemes:
+        - HTTP
+        - HTTPS
