--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "victorybiz/geoip-location": "^1.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
