--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\AppAuthenticator
+                    - App\Service\Security\AppAuthenticatorService
             logout:
                 path: app_auth_logout
                 target: app_auth_login
